--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ li
 	margin-left:10px; 
 	list-style-type:circle;
 }
-#hometext a { font-size: 2em; margin-left: 5px; margin-right:10px; display: none; color: #41B1E1; font-weight: normal;  }
+#hometext a { font-size: 2em; margin-left: 0px; margin-right:10px; display: block; color: #41B1E1; font-weight: normal;  }
 #home:hover 
 { 
 	background:none; 
@@ -99,6 +99,14 @@ img
 	margin-bottom: 5px;
 }
 
+#side .sectionPersonal
+{
+	font-size:1.2em; padding:0px; margin:5px 0px 5px 10px;
+}
+#side .PersonalTitle
+{
+	font-size:1.2em; padding:0px; margin:5px 0px 5px 10px; font-weight: Bold; color:#13678b;
+}
 
 /* min-device-width: 800px instead? */
 @media screen and (max-width:900px)
